--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "0.0.1",
+  "homepage": "https://nasytheslayer.github.io/budgetTracker-backend/",
   "description": "",
   "author": "",
   "private": true,
